# Studienarbeit

./: Dockerfile  README.md  admin.py  anmeldung.py  automat.py  datenbank.py  docker-compose.yml  lager.py  lagerbestand.db  log_protokoll.csv  main.py  pyproject.toml  requirements.txt  users.db  warnung.py
src/lagersystem/: admin.py  anmeldung.py  automat.py  datenbank.py  lager.py  main.py  warnung.py
src/lagersystem/databases/: lagerbestand.db  users.db
tests/: FA-01.py  FA-02.py  FA-03.py  FA-04.py  FA-05.py  FA-06.py  NFA-01.py  NFA-02.py  NFA-03.py  NFA-04.py  NFA-05.py  NFA-06.py
