[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lagersystem"
version = "1.0.0"
description = "Ein interaktives Medikamenten-Lagersystem mit Warnungen, Benutzerverwaltung und Automatenintegration"
authors = [
    {name = "Johanna Knipfer"}
]
dependencies = [
    "streamlit>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "requests>=2.25.1",
    "bcrypt>=3.2.0",
    "python-dotenv>=0.19.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "unittest-xml-reporting>=3.2.0",
    "sqlalchemy>=2.0.0"
]